# ttbar-kinsol-comp

./: .gitignore  .gitmodules  README.md  runSolver.py
data/bveto/: 176576_DIL_optimSRjets.root
dileptonSolver/: CMakeLists.txt  DileptonAnalyticalSolver.cc  DileptonAnalyticalSolver.h  example.cc  makeLib.C
